--- a/Portfolio/css/style.css
+++ b/Portfolio/css/style.css
@@ -1,4 +1,15 @@
-.container h2 {
-    background: lightgray;
-    width:755px;
+#main-header img {
+    width: 100%;
+    height: 100%;
+}
+.bg-black {
+    color: #fff;
+    background: #000;
+}
+#main-header .port-item {
+    width: 30%;
+}
+#main-header .port-item:hover {
+    opacity: 0.8;
+    cursor: pointer;
 }
